2001-01-14  Alan Modra  <alan@linuxcare.com.au>

	* elf64-hppa.c (elf64_hppa_finish_dynamic_symbol): Use 16-bit
	offsets for stub .plt access if wide mode.  Check offset in range.

2001-01-13  Nick Clifton  <nickc@redhat.com>

	* elf32-fr30.c (fr30_elf_howto_table): Remove spurious blank
	line.

	* coffcode.h (coff_canonicalize_reloc): Remove spurious blank
	line.

2001-01-12  Alan Modra  <alan@linuxcare.com.au>

	* configure.in ([bfd_elf64_x86_64_vec]): Set target64.
	* configure: Regenerate.

2001-01-11  Peter Targett  <peter.targett@arccores.com>

	* bfd-in2.h (bfd_architecture): Add bfd_mach_arc_5,
	bfd_mach_arc_6, bfd_mach_arc_7, bfd_mach_arc_8 for ARC variants.
	* cpu-arc.c (arch_info_struct): Add entries for variants.
	(bfd_arc_arch) Set default to bfd_mach_arc_5.
	(arc_get_mach) Don't assume machine names prefixed arc- before
	testing.
	* elf32-arc.c (arc_elf_object_p): Set machine number based on new
	selections.
	(arc_elf_final_write_processing) Likewise.
	(ELF_MACHINE_CODE) Use EM_ARC.

2001-01-10  Nick Clifton  <nickc@redhat.com>

	* coff-arm.c (LOCAL_LABEL_PREFIX): Change definition to "".

2001-01-07  Philip Blundell  <philb@gnu.org>

	* README: Replace `bug-gnu-utils@gnu.org' with
	`bug-binutils@gnu.org'.

2001-01-04  Kazu Hirata  <kazu@hxi.com>

	* som.c: Fix formatting.

2001-01-03  Kazu Hirata  <kazu@hxi.com>

	* ecoffswap.h: Fix formatting.
	* elf-bfd.h: Likewise.
	* elfarm-nabi.c: Likewise.
	* elfarm-oabi.c: Likewise.
	* elfcode.h: Likewise.
	* elfcore.h: Likewise.
	* elflink.c: Likewise.
	* elflink.h: Likewise.
	* elfxx-ia64.c: Likewise.
	* elfxx-target.h: Likewise.
	* libbfd.c: Likewise
	* linker.c: Likewise.
	* lynx-core.c: Likewise.

2001-01-02  Kazu Hirata  <kazu@hxi.com>

	* pc532-mach.c: Fix formatting.
	* pe-arm.c: Likewise.
	* pe-i386.c: Likewise.
	* pe-mips.c: Likewise.
	* pe-ppc.c: Likewise.
	* pe-sh.c: Likewise.
	* pei-mips.c: Likewise.
	* pei-sh.c: Likewise.
	* peicode.h: Likewise.
	* ppcboot.c: Likewise.
	* ptrace-core.c: Likewise.