@@ -1,5 +1,10 @@
 2001-01-14  Alan Modra  <alan@linuxcare.com.au>
 
+	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Don't create
+	.plt entries for DT_INIT and DT_FINI.
+	(elf32_hppa_finish_dynamic_sections): Remove special handling of
+	DT_INIT and DT_FINI.
+
 	* elf64-hppa.c (elf64_hppa_finish_dynamic_symbol): Use 16-bit
 	offsets for stub .plt access if wide mode.  Check offset in range.
 
